change encoding to UTF8 + format code